--- a/style.css
+++ b/style.css
@@ -1,26 +1,77 @@
-#code, #input, #output {
-    display: inline-block;
-    width: 20vw;
-    /* border: 1px solid grey; */
+@import url('https://fonts.googleapis.com/css?family=Roboto+Mono:300,400&display=swap');
+
+* {
+    font-family: 'Roboto Mono', monospace;
+}
+
+body {
+    padding: 20px;
+    margin: 0;
+    width: 100vw;
+    height: 100vh;
+    box-sizing: border-box;
+}
+
+#tape {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+}
+#tape::after {
+    content: '▲';
+    position: absolute;
+    display: block;
+    top: 71px;
+    color: #555;
+}
+#tape > .cell {
+    display: inline-flex;
+    position: relative;
+    width: 60px;
+    height: 60px;
+    font-size: 25px;
+    border: 1px solid #999;
+    border-right: none;
+    text-align: center;
+    align-items: center;
+    justify-content: center;
+    letter-spacing: -2px;
+    padding-right: 2px;
+    box-sizing: border-box;
+}
+#tape > .cell:last-child {
+    border-right: 1px solid #999;
+}
+#tape > .cell > .ascii,
+#tape > .cell > .index {
+    position: absolute;
+    font-size: 12px;
+    line-height: 12px;
+    opacity: 0.5;
+}
+#tape > .cell > .ascii {
+    top: 1px;
+    right: 2px;
+}
+#tape > .cell > .index {
+    bottom: 1px;
+    left: 2px;
+}
+
+#main {
+    display: flex;
+    height: calc(80vh - 100px);
 }
 
 #code {
-    height: 70vh;
+    width: 40vw;
+    height: 100%;
 }
-
-#input {
-    height: 50vh;
-}
-
-#output {
-    height: 70vh;
+#code > textarea {
+    width: 100%;
+    height: 100%;
 }
 
 button {
     display: inline-block;
-}
-
-#tape > .cell {
-    display: inline-block;
-    padding: 5px;
 }
