--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 
 * {
     font-family: 'Roboto Mono', monospace;
+    box-sizing: border-box;
 }
 
 body {
@@ -9,7 +10,6 @@ body {
     margin: 0;
     width: 100vw;
     height: 100vh;
-    box-sizing: border-box;
 }
 
 #tape {
@@ -29,49 +29,187 @@ body {
     position: relative;
     width: 60px;
     height: 60px;
-    font-size: 25px;
     border: 1px solid #999;
     border-right: none;
     text-align: center;
     align-items: center;
     justify-content: center;
-    letter-spacing: -2px;
-    padding-right: 2px;
-    box-sizing: border-box;
 }
 #tape > .cell:last-child {
     border-right: 1px solid #999;
 }
 #tape > .cell > .ascii,
-#tape > .cell > .index {
+#tape > .cell > .index,
+#tape.switched > .cell > .value {
     position: absolute;
     font-size: 12px;
     line-height: 12px;
     opacity: 0.5;
+    letter-spacing: unset;
+    padding-right: unset;
 }
-#tape > .cell > .ascii {
-    top: 1px;
-    right: 2px;
+#tape > .cell > .ascii,
+#tape.switched > .cell > .value {
+    top: 2px;
+    right: 3px;
+}
+#tape > .cell > .value,
+#tape.switched > .cell > .ascii {
+    position: relative;
+    font-size: 25px;
+    opacity: 1;
+    top: unset;
+    right: unset;
 }
 #tape > .cell > .index {
-    bottom: 1px;
-    left: 2px;
+    bottom: 2px;
+    left: 3px;
+}
+
+#queue {
+    display: flex;
+    position: relative;
+    left: calc(50% - 20px);
+    width: 50%;
+    margin-top: 8px;
+    height: 40px;
+}
+#queue > .char {
+    display: inline-block;
+    position: relative;
+    border: 1px solid #999;
+    border-right: none;
+    width: 40px;
+    height: 40px;
+}
+#queue > .char:last-child {
+    border-right: 1px solid #999;
+}
+#queue > .char > .value,
+#queue > .char > .ascii {
+    text-align: center;
+}
+#queue > .char > .value,
+#queue.switched > .char > .ascii {
+    position: absolute;
+    font-size: 18px;
+    line-height: initial;
+    opacity: 1;;
+    width: 40px;
+    top: 0;
+    bottom: unset;
+}
+#queue > .char > .ascii,
+#queue.switched > .char > .value {
+    position: absolute;
+    font-size: 11px;
+    line-height: 11px;
+    opacity: 0.5;
+    width: 40px;
+    top: unset;
+    bottom: 3px;
 }
 
 #main {
+    margin-top: 10px;
     display: flex;
     height: calc(80vh - 100px);
 }
 
-#code {
-    width: 40vw;
-    height: 100%;
+#edit {
+    width: 50%;
+    padding-right: 5px;
 }
-#code > textarea {
+#code {
     width: 100%;
     height: 100%;
+    font-size: 13px;
+    padding: 5px;
+    white-space: pre;
+    overflow-y: scroll;
+    border: 1px solid #ccc;
+    outline: none;
+}
+#code > span {
+    background-color: #333;
+    color: #ccc;
 }
 
-button {
-    display: inline-block;
+#io {
+    width: 50%;
+    padding-left: 5px;
+}
+#io_top {
+    display: flex;
+    height: calc(15% - 10px);
+    margin-bottom: 10px;
+}
+#input {
+    width: 40%;
+    height: 100%;
+    font-size: 13px;
+    padding: 5px;
+    resize: none;
+}
+#submit_input {
+    height: 100%;
+    vertical-align: top;
+    margin: 1px 8px 0 8px;
+    font-size: 40px;
+    padding: 0 5px 3px 5px;
+}
+#status {
+    display: inline-flex;
+    text-align: center;
+    justify-content: center;
+    flex-grow: 1;
+    height: 100%;
+    flex-direction: column;
+}
+#reset_code {
+    height: 100%;
+    vertical-align: top;
+    margin: 1px 0 0 8px;
+    font-size: 40px;
+    padding: 0 5px 7px 5px;
+}
+#step_code {
+    height: 100%;
+    vertical-align: top;
+    margin: 1px 0 0 8px;
+    font-size: 40px;
+    padding: 0 5px 7px 5px;
+}
+#run_code {
+    height: 100%;
+    vertical-align: top;
+    margin: 1px 0 0 8px;
+    font-size: 30px;
+    padding: 0 5px 7px 5px;
+}
+#run_code > span {
+    font-size: 23px;
+    position: relative;
+    bottom: 1px;
+    letter-spacing: -4px;
+}
+#output {
+    width: 100%;
+    height: 85%;
+    font-size: 13px;
+    padding: 5px;
+    border: 1px solid #ccc;
+}
+#output > span {
+    color: #999;
+    user-select: none;
+}
+#code.empty::before {
+    content: 'Your Brainfuck code goes here';
+    color: #999;
+    cursor: text;
+    position: absolute;
+}
+#input:focus, #code:focus {
+    border: 1px solid #888;
 }
